sql removed & error fixed